# models/reply.js
@@ -3,8 +3,8 @@ const { Model } = require('sequelize')
 module.exports = (sequelize, DataTypes) => {
   class Reply extends Model {
     static associate(models) {
-      Reply.belongsTo(models.User, { foreignKey: 'UserId' })
-      Reply.belongsTo(models.Tweet, { foreignKey: 'TweetId' })
+      Reply.belongsTo(models.User, { foreignKey: 'UserId', as: 'reply_user'})
+      Reply.belongsTo(models.Tweet, { foreignKey: 'TweetId'})
     }
   }
   Reply.init(
